added ex. Passing Dynamic Value to Fragment

--- a/SpringBoot/ThymeleafBoot/src/main/resources/templates/footer.html
+++ b/SpringBoot/ThymeleafBoot/src/main/resources/templates/footer.html
@@ -27,5 +27,9 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem voluptates laudantium rem impedit! Cupiditate, deleniti ducimus consequuntur porro nisi doloremque voluptatem neque debitis corporis, enim voluptate recusandae quidem doloribus unde.</p>
         </div>
     </footer>
+    <div id="divFragmentTag" th:fragment="divison(title,subtitle)">
+        <h1>Title of the Fragment : <span th:text="${title}"></span></h1>
+        <h2>Subtitle of the Fragment : <span th:text="${subtitle}"></span></h2>
+    </div>
 </body>
 </html>
