--- a/SpringBoot/SmartContactManager/src/main/resources/templates/signup.html
+++ b/SpringBoot/SmartContactManager/src/main/resources/templates/signup.html
@@ -45,7 +45,7 @@
                 <div class="my-card">
                     <h1 class="text-center">Registration Form</h1>
 
-                    <form th:action="@{/process_form}" method="post" th:object="${user}" novalidate>
+                    <form th:action="@{/process_form}" method="post" th:object="${user}">
                         <div class="mb-3">
                             <label for="name_input" class="form-label">Name</label>
                             <input 
@@ -55,8 +55,10 @@
                                 id="name_input"
                                 placeholder="Enter Name"
                                 th:value="${user.name}"
+                                th:classappend="${#fields.hasErrors('name')?'is-invalid':''}"
                                 required
                                 >
+                                <div class="invalid-feedback" th:each=" e : ${#fields.errors('name')}" th:text="${e}"></div>
                           </div>
 
                           <!-- <div class="mb-3" style="background-color: yellow;"> -->
@@ -69,8 +71,10 @@
                                 id="email_input"
                                 placeholder="Enter Email"
                                 th:value="${user.email}"
+                                th:classappend="${#fields.hasErrors('email')?'is-invalid':''}"
                                 required
                                 >
+                                <div th:each=" e : ${#fields.errors('email')}" th:text="${e}" class="invalid-feedback"></div>
                           </div>
 
                         <!-- <div class="mb-3" style="background-color: yellow;"> -->
@@ -82,8 +86,10 @@
                                 class="form-control"
                                 id="password_input"
                                 placeholder="Enter Password"
+                                th:classappend="${#fields.hasErrors('password')?'is-invalid':''}"
                                 required
                                 >
+                                <div class="invalid-feedback" th:each=" e : ${#fields.errors('password')}" th:text="${e}"></div>
                           </div>
                         <!-- <div class="mb-3" style="background-color: yellow;"> -->
                         <div class="mb-3">
