Customised SignIn form

--- a/SpringBoot/SmartContactManager/src/main/resources/static/css/style.css
+++ b/SpringBoot/SmartContactManager/src/main/resources/static/css/style.css
@@ -26,3 +26,17 @@ nav {
     width: 100%;
     z-index: 1000; /* ensure it's on top of other elements */
 }
+
+#login .container #login-row #login-column #login-box {
+  margin-top: 120px;
+  max-width: 600px;
+  height: 320px;
+  border: 1px solid #9C9C9C;
+  background-color: #EAEAEA;
+}
+#login .container #login-row #login-column #login-box #login-form {
+  padding: 20px;
+}
+#login .container #login-row #login-column #login-box #login-form #register-link {
+  margin-top: -85px;
+}
