--- a/SpringBoot/SmartContactManager/src/main/resources/templates/base.html
+++ b/SpringBoot/SmartContactManager/src/main/resources/templates/base.html
@@ -35,7 +35,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" th:href="@{login}">Login</a>
+          <a class="nav-link" th:href="@{signin}">SingIn</a>
         </li>
 
         <li class="nav-item">
